feat: implement minimum login integration
