# server/admin-service/api/auth/v1/auth_http.pb.go
@@ -1,0 +1,165 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.2
+// - protoc             (unknown)
+// source: auth/v1/auth.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v3/transport/http"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+
+const _ = http.SupportPackageIsVersion3
+
+const OperationAuthServiceCurrentUser = "/auth.v1.AuthService/CurrentUser"
+const OperationAuthServiceLogin = "/auth.v1.AuthService/Login"
+const OperationAuthServiceOutLogin = "/auth.v1.AuthService/OutLogin"
+
+type AuthServiceHTTPServer interface {
+	// CurrentUser CurrentUser returns the signed-in user for the bearer token.
+	CurrentUser(context.Context, *CurrentUserRequest) (*CurrentUserReply, error)
+	// Login Login authenticates a user with username and password.
+	Login(context.Context, *LoginRequest) (*LoginReply, error)
+	// OutLogin OutLogin accepts a logout request.
+	OutLogin(context.Context, *OutLoginRequest) (*OutLoginReply, error)
+}
+
+func RegisterAuthServiceHTTPServer(s *http.Server, srv AuthServiceHTTPServer) {
+	r := s.Route("/")
+	r.Handle("POST", "/api/login/account", _AuthService_Login0_HTTP_Handler(srv))
+	r.Handle("GET", "/api/currentUser", _AuthService_CurrentUser0_HTTP_Handler(srv))
+	r.Handle("POST", "/api/login/outLogin", _AuthService_OutLogin0_HTTP_Handler(srv))
+}
+
+func _AuthService_Login0_HTTP_Handler(srv AuthServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LoginRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAuthServiceLogin)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Login(ctx, req.(*LoginRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*LoginReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AuthService_CurrentUser0_HTTP_Handler(srv AuthServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CurrentUserRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAuthServiceCurrentUser)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CurrentUser(ctx, req.(*CurrentUserRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CurrentUserReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _AuthService_OutLogin0_HTTP_Handler(srv AuthServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in OutLoginRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAuthServiceOutLogin)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.OutLogin(ctx, req.(*OutLoginRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*OutLoginReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type AuthServiceHTTPClient interface {
+	// CurrentUser CurrentUser returns the signed-in user for the bearer token.
+	CurrentUser(ctx context.Context, req *CurrentUserRequest, opts ...http.CallOption) (rsp *CurrentUserReply, err error)
+	// Login Login authenticates a user with username and password.
+	Login(ctx context.Context, req *LoginRequest, opts ...http.CallOption) (rsp *LoginReply, err error)
+	// OutLogin OutLogin accepts a logout request.
+	OutLogin(ctx context.Context, req *OutLoginRequest, opts ...http.CallOption) (rsp *OutLoginReply, err error)
+}
+
+type AuthServiceHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewAuthServiceHTTPClient(client *http.Client) AuthServiceHTTPClient {
+	return &AuthServiceHTTPClientImpl{client}
+}
+
+// CurrentUser CurrentUser returns the signed-in user for the bearer token.
+func (c *AuthServiceHTTPClientImpl) CurrentUser(ctx context.Context, in *CurrentUserRequest, opts ...http.CallOption) (*CurrentUserReply, error) {
+	var out CurrentUserReply
+	pattern := "/api/currentUser"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationAuthServiceCurrentUser),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// Login Login authenticates a user with username and password.
+func (c *AuthServiceHTTPClientImpl) Login(ctx context.Context, in *LoginRequest, opts ...http.CallOption) (*LoginReply, error) {
+	var out LoginReply
+	pattern := "/api/login/account"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationAuthServiceLogin),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// OutLogin OutLogin accepts a logout request.
+func (c *AuthServiceHTTPClientImpl) OutLogin(ctx context.Context, in *OutLoginRequest, opts ...http.CallOption) (*OutLoginReply, error) {
+	var out OutLoginReply
+	pattern := "/api/login/outLogin"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationAuthServiceOutLogin),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
