# server/admin-service/cmd/admin-service/wire_gen.go
@@ -31,8 +31,11 @@ func wireApp(confServer *conf.Server, confData *conf.Data, logger *slog.Logger) 
 	todoRepo := data.NewTodoRepo(dataData)
 	todoUsecase := biz.NewTodoUsecase(todoRepo)
 	todoService := service.NewTodoService(todoUsecase)
-	grpcServer := server.NewGRPCServer(confServer, todoService)
-	httpServer := server.NewHTTPServer(confServer, todoService)
+	authRepo := data.NewAuthRepo(dataData)
+	authUsecase := biz.NewAuthUsecase(authRepo)
+	authService := service.NewAuthService(authUsecase)
+	grpcServer := server.NewGRPCServer(confServer, todoService, authService)
+	httpServer := server.NewHTTPServer(confServer, todoService, authService)
 	app := newApp(logger, grpcServer, httpServer)
 	return app, func() {
 		cleanup()
