# server/admin-service/internal/server/http.go
@@ -4,6 +4,7 @@ import (
 	"github.com/go-kratos/kratos/v3/middleware/recovery"
 	"github.com/go-kratos/kratos/v3/middleware/validate"
 	"github.com/go-kratos/kratos/v3/transport/http"
+	authv1 "template-v6/server/admin-service/api/auth/v1"
 	v1 "template-v6/server/admin-service/api/todo/v1"
 	"template-v6/server/admin-service/internal/conf"
 	"template-v6/server/admin-service/internal/service"
@@ -13,7 +14,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, todo *service.TodoService) *http.Server {
+func NewHTTPServer(c *conf.Server, todo *service.TodoService, auth *service.AuthService) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -38,5 +39,6 @@ func NewHTTPServer(c *conf.Server, todo *service.TodoService) *http.Server {
 	}
 	srv := http.NewServer(opts...)
 	v1.RegisterTodoServiceHTTPServer(srv, todo)
+	authv1.RegisterAuthServiceHTTPServer(srv, auth)
 	return srv
 }
